@@ -1,5 +1,3 @@
 require 'mkmf'
-if try_cflags("-std=iso9899:1999")
-  $CFLAGS += " " << "-std=iso9899:1999"
-end
+append_cflags("-std=iso9899:1999")
 create_makefile('date_core')
