@@ -1,3 +1,8 @@
+Sat Apr 11 10:59:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (append_cppflags, append_cflags, append_ldflags):
+	  utility methods to append compiler options.
+
 Sat Apr 11 08:22:24 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* lib/rdoc/text.rb: removed duplicated code.
